--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Analytics App</title>
+    <script async defer data-website-id="fc60698c-331d-4e63-9d08-7dd32121d917" src="https://kleap-umami.herokuapp.com/umami.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
