fix: change umami url

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Analytics App</title>
-    <script async defer data-website-id="e7f90254-f392-4c94-b48f-2135dc731533" src="https://6ad4-154-126-87-190.ngrok.io/umami.js"></script>
+    <script async defer data-website-id="e7f90254-f392-4c94-b48f-2135dc731533" src="https://f79a-154-126-64-74.ngrok.io/umami.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
