disable auto track

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Analytics App</title>
-    <script async defer data-website-id="39ebfb0e-c219-462e-a7b0-b5d96e73997e" src="http://analytics.kleap.co:4000/umami.js"></script>
-    <!-- <script async defer data-website-id="e7f90254-f392-4c94-b48f-2135dc731533" src="https://f79a-154-126-64-74.ngrok.io/umami.js"></script> -->
+    <!-- <script async defer data-website-id="39ebfb0e-c219-462e-a7b0-b5d96e73997e" src="http://analytics.kleap.co:4000/umami.js"></script> -->
+    <script async defer data-website-id="e7f90254-f392-4c94-b48f-2135dc731533" data-auto-track="false" src="https://f79a-154-126-64-74.ngrok.io/umami.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
