test: enable auto tracker

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Analytics App</title>
     <!-- <script async defer data-website-id="39ebfb0e-c219-462e-a7b0-b5d96e73997e" src="http://analytics.kleap.co:4000/umami.js"></script> -->
     <!-- <script async defer data-website-id="39ebfb0e-c219-462e-a7b0-b5d96e73997e" data-auto-track="false" src="https://f79a-154-126-64-74.ngrok.io/umami.js"></script> -->
-    <script async defer data-website-id="39ebfb0e-c219-462e-a7b0-b5d96e73997e" data-auto-track="false" src="https://analytics.kleap.co/umami.js"></script>
+    <script async defer data-website-id="39ebfb0e-c219-462e-a7b0-b5d96e73997e" src="https://analytics.kleap.co/umami.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
